# dcmdb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
dcmdb/: cases.py  chase.py  defaults.py  transfer2lumi.py
dcmdb/cases/Ianos_2020/: IANOS500m_de_fc%Y%m%d%H+%LLLgrib2_fp.json  IANOS_43h221_de_fc%Y%m%d%H+%LLLgrib2_fp.json  data.json  meta.yaml
dcmdb/cases/Spain_202205/: AIB_43h221_de_fc%Y%m%d%H+%LLLgrib2_fp.json  VAL500m_de_fc%Y%m%d%H+%LLLgrib2_fp.json  VAL500m_de_fc%Y%m%d%H+%LLLgrib_sfxs.json  data.json  meta.yaml
dcmdb/cases/aude_2018/: data.json
dcmdb/cases/austria_2022/: cy43_aromeaut_ref_PFAROM+%LLLL.grib2.json  cy46_aromeaut_ref_PFAROM+%LLLL.grb2.json  meta.yaml
dcmdb/cases/bulgaria_2022/: data.json  meta.yaml
dcmdb/cases/czech_2017/: data.json  meta.yaml
dcmdb/cases/denmark_2019/: data.json  meta.yaml  readme.md
dcmdb/cases/denmark_2020/: data.json  dini20a_case_fc%Y%m%d%H+%LLLgrib_fp.json  meta.yaml  readme.md
dcmdb/cases/faroes_2021/: cy43_dini20a_fc%Y%m%d%H+%LLLgrib_sfxs.json  cy46_faroe500_fc%Y%m%d%H+%LLLgrib2_fp.json  cy46_faroe500_fc%Y%m%d%H+%LLLgrib_sfxs.json  data.json  meta.yaml
dcmdb/cases/finland_2017/: cy43_deode_ref_fin_fc%Y%m%d%H+%LLLgrib2_fp.json  cy46h1_EDT_s0d_n200_1500gp_pgdMPI_fc%Y%m%d%H+%LLLgrib_sfxs.json  cy46h1_EDT_s0d_n500_1500gp_fc%Y%m%d%H+%LLLgrib2_fp.json  data.json  meta.yaml
dcmdb/cases/gavle_2021/: data.json  deode_cy46750_fc%Y%m%d%H+%LLLgrib2_fp.json  meta.yaml
dcmdb/cases/iceland_2017/: cy43_ref_iceland_fc%Y%m%d%H+%LLLgrib.json  cy43_ref_iceland_fc%Y%m%d%H+%LLLgrib_fp.json  (+2 more)
(+12 files in other folders)
