
[project]
name = "dcmdb"
version = "0.1.0"
description = ""
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "pyyaml>=6.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.2",
]
